<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_place_activity_lat"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_place_activity_lat"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_place_activity_lng"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_place_activity_lng"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_place_activity_name"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_place_activity_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_place_activity_description"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_place_activity_description"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_place_activity_address"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_place_activity_address"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_place_activity_img_url"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_place_activity_img_url"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_place_activity_confirm"
                    android:id="@+id/new_place_activity_confirm"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

